fix(bar): add spacing between centerbox groups

--- a/src/style.scss
+++ b/src/style.scss
@@ -14,6 +14,10 @@ window.bar {
   }
 }
 
+.bar-groups {
+  border-spacing: 40px;
+}
+
 .bright,
 .primary {
   color: rgba(255, 255, 255, 1.0);
